--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <canvas id="canvas" height="150" width="150"></canvas>
     <script type="module" src="/src/module.js"></script>
   </body>
 </html>
