--- a/gl.html
+++ b/gl.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="/src/index.css" rel="stylesheet">
     <title>Vite App</title>
   </head>
   <body>
-    <h1 class="text-3xl font-bold underline">
-        Hello world!
-    </h1>
+    <div id="app"></div>
+    <canvas id="canvas" height="500" width="500"></canvas>
+    <script type="module" src="/src/module.js"></script>
   </body>
 </html>
