--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h1 class="text-3xl font-bold underline">
         Hello world!
     </h1>
+    <button class="btn btn-primary">Button</button>
   </body>
 </html>
