--- a/gl.html
+++ b/gl.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="/src/index.css" rel="stylesheet">
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
-    <canvas id="canvas" height="500" width="500"></canvas>
+    <canvas id="canvas"></canvas>
     <script type="module" src="/src/module.js"></script>
+    <script type="module" src="/src/resizer.js"></script>
   </body>
 </html>
