--- a/index.html
+++ b/index.html
@@ -8,9 +8,47 @@
     <title>Vite App</title>
   </head>
   <body>
-    <h1 class="text-3xl font-bold underline">
-        Hello world!
-    </h1>
-    <button class="btn btn-primary">Button</button>
+    <canvas id="canvas" class="-z-10 absolute h-screen w-screen"></canvas>
+    <div class="">
+      <div class="md:float-left md:w-1/3 md:h-screen p-8">
+        <div class="card bg-base-200 shadow-xl">
+          <div class="card-body">
+            <div class="avatar items-center h-64 mb-5">
+              <img class="mask mask-squircle w-64" src="https://i.redd.it/cwdg7g1vqjj21.jpg" alt="Avatar">
+            </div>
+            <h1 class="card-title justify-center text-primary text-3xl">Name Goes Here</h1>
+            <div class="card-actions justify-center m-2">
+              <div class="badge badge-primary">Something A</div>
+              <div class="badge badge-secondary">Something B</div>
+              <div class="badge badge-accent">Something C</div>
+            </div>
+            <p class="mt-2">
+              Something Something Something
+            </p>
+            <div class="grid grid-flow-row mt-5 gap-x-4 gap-y-4 grid-cols-2 lg:grid-cols-3">
+              <button class="btn btn-outline btn-secondary gap-2">
+                <img src="public/document-icon.svg" alt="">
+                Social
+              </button>
+              <button class="btn btn-outline btn-secondary gap-2">
+                <img src="public/document-icon.svg" alt="">
+                Social
+              </button>
+              <button class="btn btn-outline btn-secondary gap-2">
+                <img src="public/document-icon.svg" alt="">
+                Social
+              </button>
+              <button class="btn btn-outline btn-secondary gap-2">
+                <img src="public/document-icon.svg" alt="">
+                Social
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="md:float-right md:w-2/3 md:h-screen p-8" style="background-color: blueviolet;">
+        Projects
+      </div>
+    </div>
   </body>
 </html>
