--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <canvas id="canvas" class="-z-10 absolute h-screen w-screen"></canvas>
     <div class="">
       <div class="md:float-left md:w-1/3 md:h-screen p-8">
-        <div class="card bg-base-200 shadow-xl">
+        <div class="card bg-base-300/50 backdrop-blur-xl shadow-xl">
           <div class="card-body">
             <div class="avatar items-center h-64 mb-5">
               <img class="mask mask-squircle w-64" src="https://i.redd.it/cwdg7g1vqjj21.jpg" alt="Avatar">
@@ -46,8 +46,39 @@
           </div>
         </div>
       </div>
-      <div class="md:float-right md:w-2/3 md:h-screen p-8" style="background-color: blueviolet;">
-        Projects
+      <div class="md:float-right md:w-2/3 md:h-screen p-8 pl-0 space-y-4">
+        <div class="collapse collapse-arrow bg-base-300/50 backdrop-blur-xl">
+          <input type="radio" name="project-accordian" />
+          <div class="collapse-title text-xl font-medium">
+            Project Title Goes Right Here
+          </div>
+          <div class="collapse-content">
+            Here is some more info about the project!
+          </div>
+        </div>
+        <div class="collapse collapse-arrow bg-base-300/50 backdrop-blur-xl">
+          <input type="radio" name="project-accordian" />
+          <div class="collapse-title p-0">
+            <img class="h-32 float-left" src="https://i.redd.it/cwdg7g1vqjj21.jpg" alt="aa">
+            <div class="inline-block p-4">
+              <h2 class="text-3xl font-medium">Project title goes here!</h2>
+              <p class="mt-2">
+                Project breif goes here!<br>
+                Should probably be a couple of lines to keep this from looking like shit!
+              </p>
+            </div>
+          </div>
+          <div class="bg-base-300/50 collapse-content">
+            <p class="mt-4">
+              Here is some more info about the project!
+            </p>
+            <br>
+            <button class="btn btn-outline btn-secondary gap-2">
+              <img src="public/document-icon.svg" alt="">
+              Social
+            </button>
+          </div>
+        </div>
       </div>
     </div>
   </body>
