--- a/index.html
+++ b/index.html
@@ -9,75 +9,73 @@
   </head>
   <body>
     <canvas id="canvas" class="-z-10 absolute h-screen w-screen"></canvas>
-    <div class="">
-      <div class="md:float-left md:w-1/3 md:h-screen p-8">
-        <div class="card bg-base-300/50 backdrop-blur-xl shadow-xl">
-          <div class="card-body">
-            <div class="avatar items-center h-64 mb-5">
-              <img class="mask mask-squircle w-64" src="https://i.redd.it/cwdg7g1vqjj21.jpg" alt="Avatar">
-            </div>
-            <h1 class="card-title justify-center text-primary text-3xl">Name Goes Here</h1>
-            <div class="card-actions justify-center m-2">
-              <div class="badge badge-primary">Something A</div>
-              <div class="badge badge-secondary">Something B</div>
-              <div class="badge badge-accent">Something C</div>
-            </div>
-            <p class="mt-2">
-              Something Something Something
-            </p>
-            <div class="grid grid-flow-row mt-5 gap-x-4 gap-y-4 grid-cols-2 lg:grid-cols-3">
-              <button class="btn btn-outline btn-secondary gap-2">
-                <img src="public/document-icon.svg" alt="">
-                Social
-              </button>
-              <button class="btn btn-outline btn-secondary gap-2">
-                <img src="public/document-icon.svg" alt="">
-                Social
-              </button>
-              <button class="btn btn-outline btn-secondary gap-2">
-                <img src="public/document-icon.svg" alt="">
-                Social
-              </button>
-              <button class="btn btn-outline btn-secondary gap-2">
-                <img src="public/document-icon.svg" alt="">
-                Social
-              </button>
-            </div>
+    <div class="md:float-left md:w-1/3 md:h-screen p-1 md:p-8">
+      <div class="card bg-base-300/50 backdrop-blur-xl shadow-xl">
+        <div class="card-body">
+          <div class="avatar items-center h-64 mb-5">
+            <img class="mask mask-squircle w-64" src="https://i.redd.it/cwdg7g1vqjj21.jpg" alt="Avatar">
           </div>
-        </div>
-      </div>
-      <div class="md:float-right md:w-2/3 md:h-screen p-8 pl-0 space-y-4">
-        <div class="collapse collapse-arrow bg-base-300/50 backdrop-blur-xl">
-          <input type="radio" name="project-accordian" />
-          <div class="collapse-title text-xl font-medium">
-            Project Title Goes Right Here
+          <h1 class="card-title justify-center text-primary text-3xl">Name Goes Here</h1>
+          <div class="card-actions justify-center m-2">
+            <div class="badge badge-primary">Something A</div>
+            <div class="badge badge-secondary">Something B</div>
+            <div class="badge badge-accent">Something C</div>
           </div>
-          <div class="collapse-content">
-            Here is some more info about the project!
-          </div>
-        </div>
-        <div class="collapse collapse-arrow bg-base-300/50 backdrop-blur-xl">
-          <input type="radio" name="project-accordian" />
-          <div class="collapse-title p-0">
-            <img class="h-32 float-left" src="https://i.redd.it/cwdg7g1vqjj21.jpg" alt="aa">
-            <div class="inline-block p-4">
-              <h2 class="text-3xl font-medium">Project title goes here!</h2>
-              <p class="mt-2">
-                Project breif goes here!<br>
-                Should probably be a couple of lines to keep this from looking like shit!
-              </p>
-            </div>
-          </div>
-          <div class="bg-base-300/50 collapse-content">
-            <p class="mt-4">
-              Here is some more info about the project!
-            </p>
-            <br>
+          <p class="mt-2">
+            Something Something Something
+          </p>
+          <div class="grid grid-flow-row mt-5 gap-x-4 gap-y-4 grid-cols-2 lg:grid-cols-3">
+            <button class="btn btn-outline btn-secondary gap-2">
+              <img src="public/document-icon.svg" alt="">
+              Social
+            </button>
+            <button class="btn btn-outline btn-secondary gap-2">
+              <img src="public/document-icon.svg" alt="">
+              Social
+            </button>
+            <button class="btn btn-outline btn-secondary gap-2">
+              <img src="public/document-icon.svg" alt="">
+              Social
+            </button>
             <button class="btn btn-outline btn-secondary gap-2">
               <img src="public/document-icon.svg" alt="">
               Social
             </button>
           </div>
+        </div>
+      </div>
+    </div>
+    <div class="md:float-right md:w-2/3 md:h-screen p-1 md:p-8 md:pl-0 mt-4 md:mt-0 space-y-4">
+      <div class="collapse collapse-arrow bg-base-300/50 backdrop-blur-xl">
+        <input type="radio" name="project-accordian" />
+        <div class="collapse-title text-xl font-medium">
+          Project Title Goes Right Here
+        </div>
+        <div class="collapse-content">
+          Here is some more info about the project!
+        </div>
+      </div>
+      <div class="collapse collapse-arrow bg-base-300/50 backdrop-blur-xl">
+        <input type="radio" name="project-accordian" />
+        <div class="collapse-title p-0">
+          <img class="h-32 float-left" src="https://i.redd.it/cwdg7g1vqjj21.jpg" alt="aa">
+          <div class="inline-block p-4">
+            <h2 class="text-3xl font-medium">Project title goes here!</h2>
+            <p class="mt-2">
+              Project breif goes here!<br>
+              Should probably be a couple of lines to keep this from looking like shit!
+            </p>
+          </div>
+        </div>
+        <div class="bg-base-300/50 collapse-content">
+          <p class="mt-4">
+            Here is some more info about the project!
+          </p>
+          <br>
+          <button class="btn btn-outline btn-secondary gap-2">
+            <img src="public/document-icon.svg" alt="">
+            Social
+          </button>
         </div>
       </div>
     </div>
