--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
       </div>
     </div>
-    <div class="md:float-right md:w-2/3 md:h-screen p-1 md:p-8 md:pl-0 mt-4 md:mt-0 space-y-4">
+    <div class="md:float-right md:w-2/3 md:h-screen p-1 md:p-8 md:pl-0 mt-4 md:mt-0 space-y-4 md:overflow-auto">
       <div class="collapse collapse-arrow bg-base-300/50 backdrop-blur-xl">
         <input type="radio" name="project-accordian" />
         <div class="collapse-title text-xl font-medium">
@@ -57,11 +57,11 @@
       </div>
       <div class="collapse collapse-arrow bg-base-300/50 backdrop-blur-xl">
         <input type="radio" name="project-accordian" />
-        <div class="collapse-title p-0">
-          <img class="h-32 float-left" src="https://i.redd.it/cwdg7g1vqjj21.jpg" alt="aa">
-          <div class="inline-block p-4">
+        <div class="collapse-title p-0 h-32 overflow-hidden">
+          <img class="h-full float-left" src="https://i.redd.it/cwdg7g1vqjj21.jpg" alt="aa">
+          <div class="inline-block p-4 absolute">
             <h2 class="text-3xl font-medium">Project title goes here!</h2>
-            <p class="mt-2">
+            <p class="mt-2 hidden md:block">
               Project breif goes here!<br>
               Should probably be a couple of lines to keep this from looking like shit!
             </p>
