--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
   </head>
   <body>
     <canvas id="canvas" class="-z-10 absolute h-screen w-screen"></canvas>
+    <script type="module" src="/src/module.js"></script>
+    <script type="module" src="/src/resizer.js"></script>
     <div class="md:float-left md:w-1/3 md:h-screen p-1 md:p-8">
-      <div class="card bg-base-300/50 backdrop-blur-xl shadow-xl">
+      <div class="card bg-base-300/50 backdrop-blur-sm shadow-xl">
         <div class="card-body">
           <div class="avatar items-center h-64 mb-5">
             <img class="mask mask-squircle w-64" src="https://i.redd.it/cwdg7g1vqjj21.jpg" alt="Avatar">
@@ -46,7 +48,7 @@
       </div>
     </div>
     <div class="md:float-right md:w-2/3 md:h-screen p-1 md:p-8 md:pl-0 mt-4 md:mt-0 space-y-4 md:overflow-auto">
-      <div class="collapse collapse-arrow bg-base-300/50 backdrop-blur-xl">
+      <div class="collapse collapse-arrow bg-base-300/50 backdrop-blur-sm">
         <input type="radio" name="project-accordian" />
         <div class="collapse-title text-xl font-medium">
           Project Title Goes Right Here
@@ -55,7 +57,7 @@
           Here is some more info about the project!
         </div>
       </div>
-      <div class="collapse collapse-arrow bg-base-300/50 backdrop-blur-xl">
+      <div class="collapse collapse-arrow bg-base-300/50 backdrop-blur-sm">
         <input type="radio" name="project-accordian" />
         <div class="collapse-title p-0 h-32 overflow-hidden">
           <img class="h-full float-left" src="https://i.redd.it/cwdg7g1vqjj21.jpg" alt="aa">
@@ -78,6 +80,7 @@
           </button>
         </div>
       </div>
+      <div class="h-[50vh]"></div>
     </div>
   </body>
 </html>
