--- a/index.html
+++ b/index.html
@@ -9,45 +9,56 @@
   </head>
   <body>
     <canvas id="canvas" class="-z-10 absolute h-screen w-screen"></canvas>
-    <script type="module" src="/src/module.js"></script>
+    <!--<script type="module" src="/src/module.js"></script>-->
     <script type="module" src="/src/resizer.js"></script>
     <div class="md:float-left md:w-1/3 md:h-screen p-1 md:p-8">
       <div class="card bg-base-300/50 backdrop-blur-sm shadow-xl">
         <div class="card-body">
-          <div class="avatar items-center h-64 mb-5">
-            <img class="mask mask-squircle w-64" src="https://i.redd.it/cwdg7g1vqjj21.jpg" alt="Avatar">
+          <div class="avatar self-center w-64 mb-5">
+            <img class="mask mask-squircle" src="/avatar.jpg" alt="Avatar">
           </div>
-          <h1 class="card-title justify-center text-primary text-3xl">Name Goes Here</h1>
+          <h1 class="card-title justify-center text-primary text-3xl">Jacob Buelow</h1>
+          <h3 class="text-center text-primary-content text-sm">Computer Scientist & Game Developer</h3>
           <div class="card-actions justify-center m-2">
-            <div class="badge badge-primary">Something A</div>
-            <div class="badge badge-secondary">Something B</div>
-            <div class="badge badge-accent">Something C</div>
+            <div class="badge badge-primary">He/They</div>
+            <div class="badge badge-secondary">Senior</div>
+            <div class="badge badge-accent">Another Badge</div>
           </div>
           <p class="mt-2">
-            Something Something Something
+            Senior at University of Wisconsin - Stout studying Computer Science and Game Design.
           </p>
           <div class="grid grid-flow-row mt-5 gap-x-4 gap-y-4 grid-cols-2 lg:grid-cols-3">
-            <button class="btn btn-outline btn-secondary gap-2">
+            <a role="button" class="btn btn-outline btn-secondary gap-2" href="https://github.com/yammyshep">
               <img src="public/document-icon.svg" alt="">
-              Social
-            </button>
-            <button class="btn btn-outline btn-secondary gap-2">
+              GitHub
+            </a>
+            <a role="button" class="btn btn-outline btn-secondary gap-2" href="https://www.linkedin.com/in/jacob-buelow-b4b493220/">
               <img src="public/document-icon.svg" alt="">
-              Social
-            </button>
-            <button class="btn btn-outline btn-secondary gap-2">
+              LinkedIn
+            </a>
+            <a role="button" class="btn btn-outline btn-secondary gap-2" href="">
               <img src="public/document-icon.svg" alt="">
-              Social
-            </button>
-            <button class="btn btn-outline btn-secondary gap-2">
+              Resume
+            </a>
+            <a role="button" class="btn btn-outline btn-secondary gap-2" href="mailto:jdbuelow@gmail.com">
               <img src="public/document-icon.svg" alt="">
-              Social
-            </button>
+              E-Mail
+            </a>
           </div>
         </div>
       </div>
     </div>
     <div class="md:float-right md:w-2/3 md:h-screen p-1 md:p-8 md:pl-0 mt-4 md:mt-0 space-y-4 md:overflow-auto">
+      <div class="collapse collapse-arrow bg-base-300/50 backdrop-blur-sm">
+        <input type="radio" name="project-accordian" />
+        <div class="collapse-title text-xl font-medium">
+          New portfolio website under construction
+        </div>
+        <div class="collapse-content">
+          I am currently working on getting this new website up and running, but you can sill view the old version
+          <a class="link link-primary" href="old/">here</a>.
+        </div>
+      </div><!--
       <div class="collapse collapse-arrow bg-base-300/50 backdrop-blur-sm">
         <input type="radio" name="project-accordian" />
         <div class="collapse-title text-xl font-medium">
@@ -79,7 +90,7 @@
             Social
           </button>
         </div>
-      </div>
+      </div>-->
       <div class="h-[50vh]"></div>
     </div>
   </body>
