--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <canvas id="canvas" class="-z-10 absolute h-screen w-screen"></canvas>
-    <!--<script type="module" src="/src/module.js"></script>-->
+    <script type="module" src="/src/module.js"></script>
     <script type="module" src="/src/resizer.js"></script>
     <div class="md:float-left md:w-1/3 md:h-screen p-1 md:p-8">
       <div class="card bg-base-300/50 backdrop-blur-sm shadow-xl">
@@ -52,16 +52,6 @@
       <div class="collapse collapse-arrow bg-base-300/50 backdrop-blur-sm">
         <input type="radio" name="project-accordian" />
         <div class="collapse-title text-xl font-medium">
-          New portfolio website under construction
-        </div>
-        <div class="collapse-content">
-          I am currently working on getting this new website up and running, but you can sill view the old version
-          <a class="link link-primary" href="old/">here</a>.
-        </div>
-      </div><!--
-      <div class="collapse collapse-arrow bg-base-300/50 backdrop-blur-sm">
-        <input type="radio" name="project-accordian" />
-        <div class="collapse-title text-xl font-medium">
           Project Title Goes Right Here
         </div>
         <div class="collapse-content">
@@ -90,7 +80,7 @@
             Social
           </button>
         </div>
-      </div>-->
+      </div>
       <div class="h-[50vh]"></div>
     </div>
   </body>
