Improve template project entry css classes to properly truncate text overruns

--- a/index.html
+++ b/index.html
@@ -60,13 +60,14 @@
       </div>
       <div class="collapse collapse-arrow bg-base-300/50 backdrop-blur-sm">
         <input type="radio" name="project-accordian" />
-        <div class="collapse-title p-0 h-32 overflow-hidden">
-          <img class="h-full float-left" src="https://i.redd.it/cwdg7g1vqjj21.jpg" alt="aa">
-          <div class="inline-block p-4 absolute">
+        <div class="collapse-title p-0 h-32 overflow-hidden flex">
+          <img class="h-full" src="https://i.redd.it/cwdg7g1vqjj21.jpg" alt="aa">
+          <div class="p-0 m-4 mr-12 min-w-0 flex flex-col">
             <h2 class="text-3xl font-medium">Project title goes here!</h2>
-            <p class="mt-2 hidden md:block">
+            <p class="mt-2 hidden md:inline min-h-0 truncate">
               Project breif goes here!<br>
               Should probably be a couple of lines to keep this from looking like shit!
+              But what if it goes on for too many lines? Will it start to look like shit then because CSS is the bane of my fucking existence???
             </p>
           </div>
         </div>
