--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/src/index.css" rel="stylesheet">
-    <title>Vite App</title>
+    <title>Jacob Buelow</title>
   </head>
   <body>
     <canvas id="canvas" class="-z-10 h-screen w-screen fixed"></canvas>
@@ -15,7 +14,7 @@
       <div class="card bg-base-300/50 backdrop-blur-sm shadow-xl">
         <div class="card-body">
           <div class="avatar self-center w-64 mb-5 md:w-full lg:w-64">
-            <img class="mask mask-squircle" src="/avatar.jpg" alt="Avatar">
+            <img class="mask mask-squircle" src="/img/avatar.jpg" alt="Avatar">
           </div>
           <h1 class="card-title justify-center text-primary text-3xl">Jacob Buelow</h1>
           <h3 class="text-center text-primary-content text-sm">Computer Scientist & Game Developer</h3>
@@ -29,19 +28,19 @@
           </p>
           <div class="grid grid-flow-row mt-5 gap-x-4 gap-y-4 grid-cols-2 lg:grid-cols-3">
             <a role="button" class="btn btn-outline btn-secondary gap-2" href="https://github.com/yammyshep">
-              <img src="public/document-icon.svg" alt="">
+              <img src="/img/document-icon.svg" alt="">
               GitHub
             </a>
             <a role="button" class="btn btn-outline btn-secondary gap-2" href="https://www.linkedin.com/in/jacob-buelow-b4b493220/">
-              <img src="public/document-icon.svg" alt="">
+              <img src="/img/document-icon.svg" alt="">
               LinkedIn
             </a>
             <a role="button" class="btn btn-outline btn-secondary gap-2" href="">
-              <img src="public/document-icon.svg" alt="">
+              <img src="/img/document-icon.svg" alt="">
               Resume
             </a>
             <a role="button" class="btn btn-outline btn-secondary gap-2" href="mailto:jdbuelow@gmail.com">
-              <img src="public/document-icon.svg" alt="">
+              <img src="/img/document-icon.svg" alt="">
               E-Mail
             </a>
           </div>
@@ -62,7 +61,7 @@
         <input type="radio" name="project-accordian" />
         <div class="collapse-title p-0 h-32 overflow-hidden flex">
           <img class="h-full" src="https://i.redd.it/cwdg7g1vqjj21.jpg" alt="aa">
-          <div class="p-0 m-4 mr-12 min-w-0 flex flex-col justify-center">
+          <div class="p-0 m-4 mr-12 min-w-0 flex flex-col justify-center lg:justify-start">
             <h2 class="text-3xl font-medium">Project title goes here!</h2>
             <p class="mt-2 hidden lg:inline min-h-0 truncate">
               Project breif goes here!<br>
@@ -75,11 +74,41 @@
           <p class="mt-4">
             Here is some more info about the project!
           </p>
-          <br>
-          <button class="btn btn-outline btn-secondary gap-2">
-            <img src="public/document-icon.svg" alt="">
-            Social
-          </button>
+          <div class="mt-8">
+            <a class="btn btn-outline btn-secondary gap-2" href="">
+              <img src="/img/document-icon.svg" alt="">
+              Social
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="collapse collapse-arrow bg-base-300/50 backdrop-blur-sm">
+        <input type="radio" name="project-accordian" />
+        <div class="collapse-title p-0 h-32 overflow-hidden flex">
+          <img class="h-full" src="/img/starlight_630x500.png" alt="Starlight Postal promotional artwork">
+          <div class="p-0 m-4 mr-12 min-w-0 flex flex-col justify-center lg:justify-start">
+            <h2 class="text-3xl font-medium">Starlight Postal</h2>
+            <p class="mt-2 hidden lg:inline min-h-0 truncate">
+              Write a thoughful but short breif for Starlight Postal here.
+            </p>
+          </div>
+        </div>
+        <div class="bg-base-300/50 collapse-content">
+          <p class="mt-4">
+            Starlight Postal is a 2D hot air balloon piloting simulator, set in the mountaintops where the usual
+            ground postal service cannot reach. Following the wind and avoiding the ground and deadly spikes,
+            you alone must deliver mail to all of the mountaintop villages.
+          </p>
+          <div class="mt-8">
+            <a class="btn btn-outline btn-secondary gap-2" href="https://canslp.itch.io/starlight-postal">
+              <img src="/img/document-icon.svg" alt="itch.io logo">
+              Play on itch.io
+            </a>
+            <a class="btn btn-outline btn-secondary gap-2" href="https://github.com/Starlight-Postal/StarlightPostal">
+              <img src="/img/document-icon.svg" alt="GitHub logo">
+              View on GitHub
+            </a>
+          </div>
         </div>
       </div>
       <div class="h-[50vh]"></div>
