--- a/index.html
+++ b/index.html
@@ -48,36 +48,75 @@
       </div>
     </div>
     <div class="md:float-right md:w-2/3 md:h-screen p-1 md:p-8 md:pl-0 mt-4 md:mt-0 space-y-4 md:overflow-auto">
-      <div class="collapse collapse-arrow bg-base-300/50 backdrop-blur-sm">
-        <input type="radio" name="project-accordian" />
-        <div class="collapse-title text-xl font-medium">
-          Project Title Goes Right Here
-        </div>
-        <div class="collapse-content">
-          Here is some more info about the project!
-        </div>
+      <div class="rounded-2xl p-4 bg-base-300/50 backdrop-blur-sm text-center">
+        <h1 class="font-medium text-3xl">Heading 1</h1>
+        <p>Paragraph text</p>
       </div>
       <div class="collapse collapse-arrow bg-base-300/50 backdrop-blur-sm">
         <input type="radio" name="project-accordian" />
         <div class="collapse-title p-0 h-32 overflow-hidden flex">
-          <img class="h-full" src="https://i.redd.it/cwdg7g1vqjj21.jpg" alt="aa">
+          <img class="h-full" src="/img/kintsugi-logo.svg" alt="Kintsugi 3D Logo">
           <div class="p-0 m-4 mr-12 min-w-0 flex flex-col justify-center lg:justify-start">
-            <h2 class="text-3xl font-medium">Project title goes here!</h2>
+            <h2 class="text-3xl font-medium">Kintsugi 3D</h2>
             <p class="mt-2 hidden lg:inline min-h-0 truncate">
-              Project breif goes here!<br>
-              Should probably be a couple of lines to keep this from looking like shit!
-              But what if it goes on for too many lines? Will it start to look like shit then because CSS is the bane of my fucking existence???
+              Write a thoughful but short breif for Starlight Postal here.
             </p>
           </div>
         </div>
         <div class="bg-base-300/50 collapse-content">
           <p class="mt-4">
-            Here is some more info about the project!
+            <!-- content text -->
           </p>
           <div class="mt-8">
-            <a class="btn btn-outline btn-secondary gap-2" href="">
-              <img src="/img/document-icon.svg" alt="">
-              Social
+            <!-- links -->
+          </div>
+        </div>
+      </div>
+      <div class="collapse collapse-arrow bg-base-300/50 backdrop-blur-sm">
+        <input type="radio" name="project-accordian" />
+        <div class="collapse-title p-0 h-32 overflow-hidden flex">
+          <img class="h-full" src="/img/comboarena-logo.jpg" alt="Combo Arena logo">
+          <div class="p-0 m-4 mr-12 min-w-0 flex flex-col justify-center lg:justify-start">
+            <h2 class="text-3xl font-medium">Combo Arena</h2>
+            <p class="mt-2 hidden lg:inline min-h-0 truncate">
+              Write a thoughful but short breif for Starlight Postal here.
+            </p>
+          </div>
+        </div>
+        <div class="bg-base-300/50 collapse-content">
+          <p class="mt-4">
+            Combo Arena is an action-packed arena roguelike shooter where you must build your ultimate weapon from a variety of available parts and weapons,
+            combining them in unique and creative ways to create the perfect killing machine to fight off dangerous robots.
+            With intuitive combat and randomized levels each run will be different.
+          </p>
+          <div class="mt-8">
+            <a class="btn btn-outline btn-secondary gap-2" href="https://cyborg-hunter20.itch.io/combo-arena">
+              <img src="/img/document-icon.svg" alt="itch.io logo">
+              Play on itch.io
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="collapse collapse-arrow bg-base-300/50 backdrop-blur-sm">
+        <input type="radio" name="project-accordian" />
+        <div class="collapse-title p-0 h-32 overflow-hidden flex">
+          <img class="h-full" src="/img/cenote-logo.png" alt="Cenote logo">
+          <div class="p-0 m-4 mr-12 min-w-0 flex flex-col justify-center lg:justify-start">
+            <h2 class="text-3xl font-medium">Cenóte</h2>
+            <p class="mt-2 hidden lg:inline min-h-0 truncate">
+              Play as Finley. When you touch water you absorb it and grow in size until you become a sea monkey.<br>
+              When you are in the air you dry out and become a land monkey.
+            </p>
+          </div>
+        </div>
+        <div class="bg-base-300/50 collapse-content">
+          <p class="mt-4">
+            
+          </p>
+          <div class="mt-8">
+            <a class="btn btn-outline btn-secondary gap-2" href="https://incarnaation9.itch.io/cenote">
+              <img src="/img/document-icon.svg" alt="itch.io logo">
+              Play on itch.io
             </a>
           </div>
         </div>
