Write some text for most projects, add contributor lists

--- a/index.html
+++ b/index.html
@@ -26,22 +26,26 @@
           <p class="mt-2">
             Senior at University of Wisconsin - Stout studying Computer Science and Game Design.
           </p>
-          <div class="grid grid-flow-row mt-5 gap-x-4 gap-y-4 grid-cols-2 lg:grid-cols-3">
+          <div class="grid grid-flow-row mt-5 gap-x-4 gap-y-4 grid-cols-2 lg:grid-cols-2">
             <a role="button" class="btn btn-outline btn-secondary gap-2" href="https://github.com/yammyshep">
-              <img src="/img/document-icon.svg" alt="">
+              <img class="h-6" src="/img/github-mark.svg" alt="GitHub Logo">
               GitHub
             </a>
             <a role="button" class="btn btn-outline btn-secondary gap-2" href="https://www.linkedin.com/in/jacob-buelow-b4b493220/">
-              <img src="/img/document-icon.svg" alt="">
+              <img class="h-6" src="/img/document-icon.svg" alt="">
               LinkedIn
             </a>
             <a role="button" class="btn btn-outline btn-secondary gap-2" href="">
-              <img src="/img/document-icon.svg" alt="">
+              <img class="h-6" src="/img/document-icon.svg" alt="">
               Resume
             </a>
             <a role="button" class="btn btn-outline btn-secondary gap-2" href="mailto:jdbuelow@gmail.com">
-              <img src="/img/document-icon.svg" alt="">
+              <img class="h-6" src="/img/document-icon.svg" alt="">
               E-Mail
+            </a>
+            <a role="button" class="btn btn-outline btn-secondary gap-2" href="https://yammyshep.itch.io/">
+              <img class="h-6" src="/img/itchio-mark.svg" alt="Itch.io Logo">
+              itch.io
             </a>
           </div>
         </div>
@@ -85,13 +89,18 @@
         </div>
         <div class="bg-base-300/50 collapse-content">
           <p class="mt-4">
+            Combo Arena was developed as part of the Game Design and Development curriculum at University of Wisconsin - Stout.<br>
+            Co-developed with
+            Rocky Blixt, Dorian Blossom, Ian Fredericks, Andrew Holthusen, Justin Schnell, and Ian Swan.<br>
+            Music by Zack Brouck, Matt Fisher, and Satlir Mangat from Michigan Tech University.
+            <br><br>
             Combo Arena is an action-packed arena roguelike shooter where you must build your ultimate weapon from a variety of available parts and weapons,
             combining them in unique and creative ways to create the perfect killing machine to fight off dangerous robots.
             With intuitive combat and randomized levels each run will be different.
           </p>
           <div class="mt-8">
             <a class="btn btn-outline btn-secondary gap-2" href="https://cyborg-hunter20.itch.io/combo-arena">
-              <img src="/img/document-icon.svg" alt="itch.io logo">
+              <img class="h-6" src="/img/itchio-mark.svg" alt="itch.io logo">
               Play on itch.io
             </a>
           </div>
@@ -111,11 +120,15 @@
         </div>
         <div class="bg-base-300/50 collapse-content">
           <p class="mt-4">
-            
+            Cenóte was developed for the Spring 2023 IGDA 48 hour game jam by
+            Jacob Buelow, Sam Baeseman, Dorian Blossom, Elizabeth Geoffery, Gavin Hefty, and Cole Nugteren.
+            <br><br>
+            In Cenóte, you play as Finley, an amphibious monkey that has the power to absorb water in their environment to grow in size, and shrink in size by standing on dry land for a while.
+            While on land, Finley can solve puzzles by collecting isopods and bringing them to pitcher plants. In the waters, Finley is able to grab a tasty fish snack.
           </p>
           <div class="mt-8">
             <a class="btn btn-outline btn-secondary gap-2" href="https://incarnaation9.itch.io/cenote">
-              <img src="/img/document-icon.svg" alt="itch.io logo">
+              <img class="h-6" src="/img/itchio-mark.svg" alt="itch.io logo">
               Play on itch.io
             </a>
           </div>
@@ -134,17 +147,22 @@
         </div>
         <div class="bg-base-300/50 collapse-content">
           <p class="mt-4">
+            Combo Arena was developed as part of the Game Design and Development curriculum at University of Wisconsin - Stout.<br>
+            Co-developed with
+            Dorian Blossom, Augusto Freitas, Andrew Holthusen, Cole Nugteren and Issac Tesch.<br>
+            Music by Mitchell Von Eschen.
+            <br><br>
             Starlight Postal is a 2D hot air balloon piloting simulator, set in the mountaintops where the usual
             ground postal service cannot reach. Following the wind and avoiding the ground and deadly spikes,
             you alone must deliver mail to all of the mountaintop villages.
           </p>
           <div class="mt-8">
             <a class="btn btn-outline btn-secondary gap-2" href="https://canslp.itch.io/starlight-postal">
-              <img src="/img/document-icon.svg" alt="itch.io logo">
+              <img class="h-6" src="/img/itchio-mark.svg" alt="itch.io logo">
               Play on itch.io
             </a>
             <a class="btn btn-outline btn-secondary gap-2" href="https://github.com/Starlight-Postal/StarlightPostal">
-              <img src="/img/document-icon.svg" alt="GitHub logo">
+              <img class="h-6" src="/img/github-mark.svg" alt="GitHub logo">
               View on GitHub
             </a>
           </div>
