Refactor images, more detail info for kintsugi3d

--- a/index.html
+++ b/index.html
@@ -59,31 +59,50 @@
       <div class="collapse collapse-arrow bg-base-300/50 backdrop-blur-sm">
         <input type="radio" name="project-accordian" />
         <div class="collapse-title p-0 h-32 overflow-hidden flex">
-          <img class="h-full" src="/img/kintsugi-logo.svg" alt="Kintsugi 3D Logo">
+          <img class="h-full" src="/img/kintsugi3d/kintsugi3d-logo.svg" alt="Kintsugi 3D Logo">
           <div class="p-0 m-4 mr-12 min-w-0 flex flex-col justify-center lg:justify-start">
             <h2 class="text-3xl font-medium">Kintsugi 3D</h2>
             <p class="mt-2 hidden lg:inline min-h-0 truncate">
-              Write a thoughful but short breif for Starlight Postal here.
+              Software for archival and distribution of 3D cultural heritage objects captured through photogrammetry.
             </p>
           </div>
         </div>
         <div class="bg-base-300/50 collapse-content">
           <p class="mt-4">
-            <!-- content text -->
+            Prior to the summer of 2023, I reached out to one of my professors about a reasearch internship opportunity they had posted about
+            building photogrammetry (the process of constructing 3D models of real-world objects using photographs) post-processing software to
+            extract and better model specularity and reflectivity for an artifact.
           </p>
-          <div class="mt-8">
-            <!-- links -->
+          <figure class="mt-8 mb-8">
+            <img src="/img/kintsugi3d/viewer-screenshot-1.jpg">
+            <figcaption><i>Guan Yu model in Kintsugi 3D Viewer, courtesy of MIA (<a class="link" href="https://skfb.ly/oBNDP">Source</a>)</i></figcaption>
+          </figure>
+          <p>
+            This software was developed in conjunction with the <a class="link" href="https://new.artsmia.org/">Minneapolis Institute of Art</a>,
+            who's archival department was able to continuously test the processing software on real-world artifacts in the musuem's collection,
+            and with members of the <a class="link" href="https://culturalheritageimaging.org/">CHI</a> (Cultural Heritage Imaging)
+            non-profit to provide resarch insights and training to other cultural heritage institutions around the world.
+          </p>
+          <div class="mt-8 space-x-3">
+            <a class="btn btn-outline btn-secondary gap-2" href="https://github.com/michaelt919/Kintsugi3DBuilder">
+              <img class="h-6" src="/img/github-mark.svg" alt="GitHub logo">
+              Kintsugi 3D Builder on GitHub
+            </a>
+            <a class="btn btn-outline btn-secondary gap-2" href="https://github.com/UWStout/Kintsugi3DViewer">
+              <img class="h-6" src="/img/github-mark.svg" alt="GitHub logo">
+              Kintsugi 3D Viewer on GitHub (maybe???)
+            </a>
           </div>
         </div>
       </div>
       <div class="collapse collapse-arrow bg-base-300/50 backdrop-blur-sm">
         <input type="radio" name="project-accordian" />
         <div class="collapse-title p-0 h-32 overflow-hidden flex">
-          <img class="h-full" src="/img/comboarena-logo.jpg" alt="Combo Arena logo">
+          <img class="h-full" src="/img/comboarena/comboarena-logo.jpg" alt="Combo Arena logo">
           <div class="p-0 m-4 mr-12 min-w-0 flex flex-col justify-center lg:justify-start">
             <h2 class="text-3xl font-medium">Combo Arena</h2>
             <p class="mt-2 hidden lg:inline min-h-0 truncate">
-              Write a thoughful but short breif for Starlight Postal here.
+              A first person shooter rogue-like arena centered around building the weapon of your dreams.
             </p>
           </div>
         </div>
@@ -98,7 +117,7 @@
             combining them in unique and creative ways to create the perfect killing machine to fight off dangerous robots.
             With intuitive combat and randomized levels each run will be different.
           </p>
-          <div class="mt-8">
+          <div class="mt-8 space-x-3">
             <a class="btn btn-outline btn-secondary gap-2" href="https://cyborg-hunter20.itch.io/combo-arena">
               <img class="h-6" src="/img/itchio-mark.svg" alt="itch.io logo">
               Play on itch.io
@@ -109,7 +128,7 @@
       <div class="collapse collapse-arrow bg-base-300/50 backdrop-blur-sm">
         <input type="radio" name="project-accordian" />
         <div class="collapse-title p-0 h-32 overflow-hidden flex">
-          <img class="h-full" src="/img/cenote-logo.png" alt="Cenote logo">
+          <img class="h-full" src="/img/cenote/cenote-logo.png" alt="Cenote logo">
           <div class="p-0 m-4 mr-12 min-w-0 flex flex-col justify-center lg:justify-start">
             <h2 class="text-3xl font-medium">Cenóte</h2>
             <p class="mt-2 hidden lg:inline min-h-0 truncate">
@@ -126,7 +145,7 @@
             In Cenóte, you play as Finley, an amphibious monkey that has the power to absorb water in their environment to grow in size, and shrink in size by standing on dry land for a while.
             While on land, Finley can solve puzzles by collecting isopods and bringing them to pitcher plants. In the waters, Finley is able to grab a tasty fish snack.
           </p>
-          <div class="mt-8">
+          <div class="mt-8 space-x-3">
             <a class="btn btn-outline btn-secondary gap-2" href="https://incarnaation9.itch.io/cenote">
               <img class="h-6" src="/img/itchio-mark.svg" alt="itch.io logo">
               Play on itch.io
@@ -137,17 +156,17 @@
       <div class="collapse collapse-arrow bg-base-300/50 backdrop-blur-sm">
         <input type="radio" name="project-accordian" />
         <div class="collapse-title p-0 h-32 overflow-hidden flex">
-          <img class="h-full" src="/img/starlight_630x500.png" alt="Starlight Postal promotional artwork">
+          <img class="h-full" src="/img/starlight/starlight_630x500.png" alt="Starlight Postal promotional artwork">
           <div class="p-0 m-4 mr-12 min-w-0 flex flex-col justify-center lg:justify-start">
             <h2 class="text-3xl font-medium">Starlight Postal</h2>
             <p class="mt-2 hidden lg:inline min-h-0 truncate">
-              Write a thoughful but short breif for Starlight Postal here.
+              A hot-air balloon mail-delivery game about community and buoyancy.
             </p>
           </div>
         </div>
         <div class="bg-base-300/50 collapse-content">
           <p class="mt-4">
-            Combo Arena was developed as part of the Game Design and Development curriculum at University of Wisconsin - Stout.<br>
+            Starlight Postal was developed as part of the Game Design and Development curriculum at University of Wisconsin - Stout.<br>
             Co-developed with
             Dorian Blossom, Augusto Freitas, Andrew Holthusen, Cole Nugteren and Issac Tesch.<br>
             Music by Mitchell Von Eschen.
@@ -156,7 +175,7 @@
             ground postal service cannot reach. Following the wind and avoiding the ground and deadly spikes,
             you alone must deliver mail to all of the mountaintop villages.
           </p>
-          <div class="mt-8">
+          <div class="mt-8 space-x-3">
             <a class="btn btn-outline btn-secondary gap-2" href="https://canslp.itch.io/starlight-postal">
               <img class="h-6" src="/img/itchio-mark.svg" alt="itch.io logo">
               Play on itch.io
