Get some finishing touches, missing images fixed

--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
               GitHub
             </a>
             <a role="button" class="btn btn-outline btn-secondary gap-2" href="https://www.linkedin.com/in/jacob-buelow-b4b493220/">
-              <img class="h-6" src="/img/document-icon.svg" alt="">
+              <img class="h-6" src="/img/linkedin-mark.svg" alt="">
               LinkedIn
             </a>
-            <a role="button" class="btn btn-outline btn-secondary gap-2" href="">
+            <a role="button" class="btn btn-outline btn-secondary gap-2" href="/file/Resume_Jacob-Buelow_FA23.pdf">
               <img class="h-6" src="/img/document-icon.svg" alt="">
               Resume
             </a>
             <a role="button" class="btn btn-outline btn-secondary gap-2" href="mailto:jdbuelow@gmail.com">
-              <img class="h-6" src="/img/document-icon.svg" alt="">
+              <img class="h-6" src="/img/email-icon.svg" alt="">
               E-Mail
             </a>
             <a role="button" class="btn btn-outline btn-secondary gap-2" href="https://yammyshep.itch.io/">
@@ -98,7 +98,7 @@
       <div class="collapse collapse-arrow bg-base-300/50 backdrop-blur-sm">
         <input type="radio" name="project-accordian" />
         <div class="collapse-title p-0 h-32 overflow-hidden flex">
-          <img class="h-full" src="/img/comboarena/comboarena-logo.jpg" alt="Combo Arena logo">
+          <img class="h-full" src="/img/comboarena/comboarena-logo.png" alt="Combo Arena logo">
           <div class="p-0 m-4 mr-12 min-w-0 flex flex-col justify-center lg:justify-start">
             <h2 class="text-3xl font-medium">Combo Arena</h2>
             <p class="mt-2 hidden lg:inline min-h-0 truncate">
