Comment out some of the placeholder things to get something deployed for m+dev

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
           <h3 class="text-center text-primary-content text-sm">Computer Scientist & Game Developer</h3>
           <div class="card-actions justify-center m-2">
             <div class="badge badge-primary">He/They</div>
-            <div class="badge badge-secondary">Senior</div>
-            <div class="badge badge-accent">Another Badge</div>
+            <div class="badge badge-secondary">UW-Stout Senior</div>
+            <!--<div class="badge badge-accent">Another Badge</div>-->
           </div>
           <p class="mt-2">
             Senior at University of Wisconsin - Stout studying Computer Science and Game Design.
@@ -52,10 +52,10 @@
       </div>
     </div>
     <div class="md:float-right md:w-2/3 md:h-screen p-1 md:p-8 md:pl-0 mt-4 md:mt-0 space-y-4 md:overflow-auto">
-      <div class="rounded-2xl p-4 bg-base-300/50 backdrop-blur-sm text-center">
+      <!--<div class="rounded-2xl p-4 bg-base-300/50 backdrop-blur-sm text-center">
         <h1 class="font-medium text-3xl">Heading 1</h1>
         <p>Paragraph text</p>
-      </div>
+      </div>-->
       <div class="collapse collapse-arrow bg-base-300/50 backdrop-blur-sm">
         <input type="radio" name="project-accordian" />
         <div class="collapse-title p-0 h-32 overflow-hidden flex">
@@ -88,10 +88,10 @@
               <img class="h-6" src="/img/github-mark.svg" alt="GitHub logo">
               Kintsugi 3D Builder on GitHub
             </a>
-            <a class="btn btn-outline btn-secondary gap-2" href="https://github.com/UWStout/Kintsugi3DViewer">
+            <!--<a class="btn btn-outline btn-secondary gap-2" href="https://github.com/UWStout/Kintsugi3DViewer">
               <img class="h-6" src="/img/github-mark.svg" alt="GitHub logo">
               Kintsugi 3D Viewer on GitHub (maybe???)
-            </a>
+            </a>-->
           </div>
         </div>
       </div>
