--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
           <h3 class="text-center text-primary-content text-sm">Computer Scientist & Game Developer</h3>
           <div class="card-actions justify-center m-2">
             <div class="badge badge-primary">He/They</div>
-            <div class="badge badge-secondary">UW-Stout Senior</div>
+            <div class="badge badge-secondary">UW-Stout Student</div>
             <!--<div class="badge badge-accent">Another Badge</div>-->
           </div>
           <p class="mt-2">
-            Senior at University of Wisconsin - Stout studying Computer Science and Game Design.
+            Student at University of Wisconsin-Stout studying Computer Science and Game Design.
           </p>
           <div class="grid grid-flow-row mt-5 gap-x-4 gap-y-4 grid-cols-2 lg:grid-cols-2">
             <a role="button" class="btn btn-outline btn-secondary gap-2" href="https://github.com/yammyshep">
@@ -56,6 +56,38 @@
         <h1 class="font-medium text-3xl">Heading 1</h1>
         <p>Paragraph text</p>
       </div>-->
+      <div class="collapse collapse-arrow bg-base-300/50 backdrop-blur-sm">
+        <input type="radio" name="project-accordian" />
+        <div class="collapse-title p-0 h-32 overflow-hidden flex">
+          <img class="h-full" src="" alt="Land of Lights logo">
+          <div class="p-0 m-4 mr-12 min-w-0 flex flex-col justify-center lg:justify-start">
+            <h2 class="text-3xl font-medium">Land of Lights</h2>
+            <p class="mt-2 hidden lg:inline min-h-0 truncate">
+              Use your wit and Guppy’s ability to unravel the mystery of the spreading disease and restore this once beautiful island!
+            </p>
+          </div>
+        </div>
+        <div class="bg-base-300/50 collapse-content">
+          <p class="mt-4">
+            Land of Lights was developed as a Game Design and Development Senior Capstone project at University of Wisconsin-Stout.<br>
+            Developed by Jacob Buelow, Rachel Bagley, Connor Born, Atlas Collins, Elliot Duffy, Lizze Garretson, Eric Hagar, Hunter Hintz,
+            Emiliy Inman, Camile Lemm, Jacob Libertoski, Casey O'Grady, Silver Ortel and Howie Ramaley.
+            <br>
+            Music by Kaylin Frisaura and Andy Lin from Berklee College of Music. 
+            <br><br>
+          </p>
+          <div class="mt-8 space-x-3">
+            <a class="btn btn-outline btn-secondary gap-2" href="https://luminous-games.itch.io/land-of-lights">
+              <img class="h-6" src="/img/itchio-mark.svg" alt="itch.io logo">
+              Play on itch.io
+            </a>
+            <a class="btn btn-outline btn-secondary gap-2" href="https://landoflightsgame.com">
+              <img class="h-6" src="" alt="Land of Lights Logo">
+              Project Website & Blog
+            </a>
+          </div>
+        </div>
+      </div>
       <div class="collapse collapse-arrow bg-base-300/50 backdrop-blur-sm">
         <input type="radio" name="project-accordian" />
         <div class="collapse-title p-0 h-32 overflow-hidden flex">
