--- a/index.html
+++ b/index.html
@@ -56,10 +56,15 @@
         <h1 class="font-medium text-3xl">Heading 1</h1>
         <p>Paragraph text</p>
       </div>-->
+      <div class="w-full grid place-items-center">
+        <div class="rounded-2xl p-4 w-1/2 bg-base-300/50 backdrop-blur-sm text-center">
+          <h1 class="font-medium text-3xl">Projects and Games</h1>
+        </div>
+      </div>
       <div class="collapse collapse-arrow bg-base-300/50 backdrop-blur-sm">
         <input type="radio" name="project-accordian" />
         <div class="collapse-title p-0 h-32 overflow-hidden flex">
-          <img class="h-full" src="" alt="Land of Lights logo">
+          <img class="h-full" src="/img/landoflights/landoflights-promo.webp" alt="Land of Lights logo">
           <div class="p-0 m-4 mr-12 min-w-0 flex flex-col justify-center lg:justify-start">
             <h2 class="text-3xl font-medium">Land of Lights</h2>
             <p class="mt-2 hidden lg:inline min-h-0 truncate">
@@ -73,7 +78,7 @@
             Developed by Jacob Buelow, Rachel Bagley, Connor Born, Atlas Collins, Elliot Duffy, Lizze Garretson, Eric Hagar, Hunter Hintz,
             Emiliy Inman, Camile Lemm, Jacob Libertoski, Casey O'Grady, Silver Ortel and Howie Ramaley.
             <br>
-            Music by Kaylin Frisaura and Andy Lin from Berklee College of Music. 
+            Music by Kaylin Frisaura and Andy Lin from Berklee College of Music.
             <br><br>
           </p>
           <div class="mt-8 space-x-3">
@@ -82,7 +87,7 @@
               Play on itch.io
             </a>
             <a class="btn btn-outline btn-secondary gap-2" href="https://landoflightsgame.com">
-              <img class="h-6" src="" alt="Land of Lights Logo">
+              <img class="h-6" src="/img/landoflights/landoflights-logo.webp" alt="Land of Lights Logo">
               Project Website & Blog
             </a>
           </div>
@@ -130,7 +135,7 @@
       <div class="collapse collapse-arrow bg-base-300/50 backdrop-blur-sm">
         <input type="radio" name="project-accordian" />
         <div class="collapse-title p-0 h-32 overflow-hidden flex">
-          <img class="h-full" src="/img/comboarena/comboarena-logo.png" alt="Combo Arena logo">
+          <img class="h-full" src="/img/comboarena/comboarena-logo.webp" alt="Combo Arena logo">
           <div class="p-0 m-4 mr-12 min-w-0 flex flex-col justify-center lg:justify-start">
             <h2 class="text-3xl font-medium">Combo Arena</h2>
             <p class="mt-2 hidden lg:inline min-h-0 truncate">
@@ -160,7 +165,7 @@
       <div class="collapse collapse-arrow bg-base-300/50 backdrop-blur-sm">
         <input type="radio" name="project-accordian" />
         <div class="collapse-title p-0 h-32 overflow-hidden flex">
-          <img class="h-full" src="/img/cenote/cenote-logo.png" alt="Cenote logo">
+          <img class="h-full" src="/img/cenote/cenote-logo.webp" alt="Cenote logo">
           <div class="p-0 m-4 mr-12 min-w-0 flex flex-col justify-center lg:justify-start">
             <h2 class="text-3xl font-medium">Cenóte</h2>
             <p class="mt-2 hidden lg:inline min-h-0 truncate">
@@ -188,7 +193,7 @@
       <div class="collapse collapse-arrow bg-base-300/50 backdrop-blur-sm">
         <input type="radio" name="project-accordian" />
         <div class="collapse-title p-0 h-32 overflow-hidden flex">
-          <img class="h-full" src="/img/starlight/starlight_630x500.png" alt="Starlight Postal promotional artwork">
+          <img class="h-full" src="/img/starlight/starlight-promo.webp" alt="Starlight Postal promotional artwork">
           <div class="p-0 m-4 mr-12 min-w-0 flex flex-col justify-center lg:justify-start">
             <h2 class="text-3xl font-medium">Starlight Postal</h2>
             <p class="mt-2 hidden lg:inline min-h-0 truncate">
