--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="card bg-base-300/50 backdrop-blur-sm shadow-xl">
         <div class="card-body">
           <div class="avatar self-center w-64 mb-5 md:w-full lg:w-64">
-            <img class="mask mask-squircle" src="/img/avatar.jpg" alt="Avatar">
+            <img class="mask mask-squircle" src="/img/avatar.webp" alt="Avatar">
           </div>
           <h1 class="card-title justify-center text-primary text-3xl">Jacob Buelow</h1>
           <h3 class="text-center text-primary-content text-sm">Computer Scientist & Game Developer</h3>
