Starlight Postal screenshots

--- a/index.html
+++ b/index.html
@@ -207,7 +207,64 @@
             Co-developed with
             Dorian Blossom, Augusto Freitas, Andrew Holthusen, Cole Nugteren and Issac Tesch.<br>
             Music by Mitchell Von Eschen.
-            <br><br>
+          </p>
+          <div class="carousel w-full mt-4 mb-4">
+            <div id="starlight-screenshot-slide1" class="carousel-item relative w-full">
+              <img
+                src="/img/starlight/starlight-screenshot-1.webp"
+                class="w-full" />
+              <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                <a href="#starlight-screenshot-slide4" class="btn btn-circle">❮</a>
+                <a href="#starlight-screenshot-slide2" class="btn btn-circle">❯</a>
+              </div>
+            </div>
+            <div id="starlight-screenshot-slide2" class="carousel-item relative w-full">
+              <img
+                src="/img/starlight/starlight-screenshot-2.webp"
+                class="w-full" />
+              <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                <a href="#starlight-screenshot-slide1" class="btn btn-circle">❮</a>
+                <a href="#starlight-screenshot-slide3" class="btn btn-circle">❯</a>
+              </div>
+            </div>
+            <div id="starlight-screenshot-slide3" class="carousel-item relative w-full">
+              <img
+                src="/img/starlight/starlight-screenshot-3.webp"
+                class="w-full" />
+              <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                <a href="#starlight-screenshot-slide2" class="btn btn-circle">❮</a>
+                <a href="#starlight-screenshot-slide4" class="btn btn-circle">❯</a>
+              </div>
+            </div>
+            <div id="starlight-screenshot-slide4" class="carousel-item relative w-full">
+              <img
+                src="/img/starlight/starlight-screenshot-4.webp"
+                class="w-full" />
+              <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                <a href="#starlight-screenshot-slide3" class="btn btn-circle">❮</a>
+                <a href="#starlight-screenshot-slide5" class="btn btn-circle">❯</a>
+              </div>
+            </div>
+            <div id="starlight-screenshot-slide5" class="carousel-item relative w-full">
+              <img
+                src="/img/starlight/starlight-screenshot-5.webp"
+                class="w-full" />
+              <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                <a href="#starlight-screenshot-slide4" class="btn btn-circle">❮</a>
+                <a href="#starlight-screenshot-slide6" class="btn btn-circle">❯</a>
+              </div>
+            </div>
+            <div id="starlight-screenshot-slide6" class="carousel-item relative w-full">
+              <img
+                src="/img/starlight/starlight-screenshot-6.webp"
+                class="w-full" />
+              <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                <a href="#starlight-screenshot-slide5" class="btn btn-circle">❮</a>
+                <a href="#starlight-screenshot-slide1" class="btn btn-circle">❯</a>
+              </div>
+            </div>
+          </div>
+          <p>
             Starlight Postal is a 2D hot air balloon piloting simulator, set in the mountaintops where the usual
             ground postal service cannot reach. Following the wind and avoiding the ground and deadly spikes,
             you alone must deliver mail to all of the mountaintop villages.
