(bad) cenote screenshots

--- a/index.html
+++ b/index.html
@@ -178,7 +178,65 @@
           <p class="mt-4">
             Cenóte was developed for the Spring 2023 IGDA 48 hour game jam by
             Jacob Buelow, Sam Baeseman, Dorian Blossom, Elizabeth Geoffery, Gavin Hefty, and Cole Nugteren.
-            <br><br>
+          </p>
+
+          <div class="carousel w-full mt-4 mb-4">
+            <div id="cenote-screenshot-slide1" class="carousel-item relative w-full">
+              <img
+                src="/img/cenote/cenote-screenshot-1.webp"
+                class="w-full" />
+              <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                <a href="#cenote-screenshot-slide4" class="btn btn-circle">❮</a>
+                <a href="#cenote-screenshot-slide2" class="btn btn-circle">❯</a>
+              </div>
+            </div>
+            <div id="cenote-screenshot-slide2" class="carousel-item relative w-full">
+              <img
+                src="/img/cenote/cenote-screenshot-2.webp"
+                class="w-full" />
+              <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                <a href="#cenote-screenshot-slide1" class="btn btn-circle">❮</a>
+                <a href="#cenote-screenshot-slide3" class="btn btn-circle">❯</a>
+              </div>
+            </div>
+            <div id="cenote-screenshot-slide3" class="carousel-item relative w-full">
+              <img
+                src="/img/cenote/cenote-screenshot-3.webp"
+                class="w-full" />
+              <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                <a href="#cenote-screenshot-slide2" class="btn btn-circle">❮</a>
+                <a href="#cenote-screenshot-slide4" class="btn btn-circle">❯</a>
+              </div>
+            </div>
+            <div id="cenote-screenshot-slide4" class="carousel-item relative w-full">
+              <img
+                src="/img/cenote/cenote-screenshot-4.webp"
+                class="w-full" />
+              <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                <a href="#cenote-screenshot-slide3" class="btn btn-circle">❮</a>
+                <a href="#cenote-screenshot-slide5" class="btn btn-circle">❯</a>
+              </div>
+            </div>
+            <div id="cenote-screenshot-slide5" class="carousel-item relative w-full">
+              <img
+                src="/img/cenote/cenote-screenshot-5.webp"
+                class="w-full" />
+              <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                <a href="#cenote-screenshot-slide4" class="btn btn-circle">❮</a>
+                <a href="#cenote-screenshot-slide6" class="btn btn-circle">❯</a>
+              </div>
+            </div>
+            <div id="cenote-screenshot-slide6" class="carousel-item relative w-full">
+              <img
+                src="/img/cenote/cenote-screenshot-6.webp"
+                class="w-full" />
+              <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                <a href="#cenote-screenshot-slide5" class="btn btn-circle">❮</a>
+                <a href="#cenote-screenshot-slide1" class="btn btn-circle">❯</a>
+              </div>
+            </div>
+          </div>
+          <P>
             In Cenóte, you play as Finley, an amphibious monkey that has the power to absorb water in their environment to grow in size, and shrink in size by standing on dry land for a while.
             While on land, Finley can solve puzzles by collecting isopods and bringing them to pitcher plants. In the waters, Finley is able to grab a tasty fish snack.
           </p>
