--- a/index.html
+++ b/index.html
@@ -52,10 +52,6 @@
       </div>
     </div>
     <div class="md:float-right md:w-2/3 md:h-screen p-1 md:p-8 md:pl-0 mt-4 md:mt-0 space-y-4 md:overflow-auto">
-      <!--<div class="rounded-2xl p-4 bg-base-300/50 backdrop-blur-sm text-center">
-        <h1 class="font-medium text-3xl">Heading 1</h1>
-        <p>Paragraph text</p>
-      </div>-->
       <div class="w-full grid place-items-center">
         <div class="rounded-2xl p-4 w-1/2 bg-base-300/50 backdrop-blur-sm text-center">
           <h1 class="font-medium text-3xl">Projects and Games</h1>
@@ -79,7 +75,66 @@
             Emiliy Inman, Camile Lemm, Jacob Libertoski, Casey O'Grady, Silver Ortel and Howie Ramaley.
             <br>
             Music by Kaylin Frisaura and Andy Lin from Berklee College of Music.
-            <br><br>
+          </p>
+          <script src="https://player.vimeo.com/api/player.js"></script>
+          <div class="carousel w-full mt-4 mb-4">
+            <div id="landoflights-screenshot-slide1" class="carousel-item relative w-full">
+              <div>
+                <iframe src="https://player.vimeo.com/video/941320251?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Land of Lights Release Trailer">
+                </iframe>
+              </div>
+              <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                <a href="#landoflights-screenshot-slide4" class="btn btn-circle">❮</a>
+                <a href="#landoflights-screenshot-slide2" class="btn btn-circle">❯</a>
+              </div>
+            </div>
+            <div id="landoflights-screenshot-slide2" class="carousel-item relative w-full">
+              <img
+                src="/img/landoflights/landoflights-screenshot-1.webp"
+                class="w-full" />
+              <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                <a href="#landoflights-screenshot-slide1" class="btn btn-circle">❮</a>
+                <a href="#landoflights-screenshot-slide3" class="btn btn-circle">❯</a>
+              </div>
+            </div>
+            <div id="landoflights-screenshot-slide3" class="carousel-item relative w-full">
+              <img
+                src="/img/landoflights/landoflights-screenshot-2.webp"
+                class="w-full" />
+              <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                <a href="#landoflights-screenshot-slide2" class="btn btn-circle">❮</a>
+                <a href="#landoflights-screenshot-slide4" class="btn btn-circle">❯</a>
+              </div>
+            </div>
+            <div id="landoflights-screenshot-slide4" class="carousel-item relative w-full">
+              <img
+                src="/img/landoflights/landoflights-screenshot-3.webp"
+                class="w-full" />
+              <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                <a href="#landoflights-screenshot-slide3" class="btn btn-circle">❮</a>
+                <a href="#landoflights-screenshot-slide5" class="btn btn-circle">❯</a>
+              </div>
+            </div>
+            <div id="landoflights-screenshot-slide5" class="carousel-item relative w-full">
+              <img
+                src="/img/landoflights/landoflights-screenshot-4.webp"
+                class="w-full" />
+              <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                <a href="#landoflights-screenshot-slide4" class="btn btn-circle">❮</a>
+                <a href="#landoflights-screenshot-slide6" class="btn btn-circle">❯</a>
+              </div>
+            </div>
+            <div id="landoflights-screenshot-slide6" class="carousel-item relative w-full">
+              <img
+                src="/img/landoflights/landoflights-screenshot-5.webp"
+                class="w-full" />
+              <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                <a href="#landoflights-screenshot-slide5" class="btn btn-circle">❮</a>
+                <a href="#landoflights-screenshot-slide1" class="btn btn-circle">❯</a>
+              </div>
+            </div>
+          </div>
+          <p>
           </p>
           <div class="mt-8 space-x-3">
             <a class="btn btn-outline btn-secondary gap-2" href="https://luminous-games.itch.io/land-of-lights">
@@ -179,7 +234,6 @@
             Cenóte was developed for the Spring 2023 IGDA 48 hour game jam by
             Jacob Buelow, Sam Baeseman, Dorian Blossom, Elizabeth Geoffery, Gavin Hefty, and Cole Nugteren.
           </p>
-
           <div class="carousel w-full mt-4 mb-4">
             <div id="cenote-screenshot-slide1" class="carousel-item relative w-full">
               <img
