Trailer embed for Combo Arena

--- a/index.html
+++ b/index.html
@@ -209,6 +209,8 @@
             combining them in unique and creative ways to create the perfect killing machine to fight off dangerous robots.
             With intuitive combat and randomized levels each run will be different.
           </p>
+          <br>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/syG2s-LqkW4?si=tf4Bbi2aowshSYHg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
           <div class="mt-8 space-x-3">
             <a class="btn btn-outline btn-secondary gap-2" href="https://cyborg-hunter20.itch.io/combo-arena">
               <img class="h-6" src="/img/itchio-mark.svg" alt="itch.io logo">
